source/styles/components/nav-bar.scss
/**
 *   ~~~ Header & Navigation Bar ~~~
 */
.site-header
{
    font-weight: 300;

    position: fixed;
    z-index: 100;
    top: 0;

    width: 100%;
    margin: 0;
    padding: 0;

    background-color: $scheppers-blauw;

    @include shadow(1);
}
.site-header__logo
{
    float: left;

    height: $line-height;
    padding: calc(#{$line-height} / 4) $line-height-half;

    color: $text-color-white;
}
.site-header__logo img
{
    height: calc(#{$line-height} * 1.5);

    vertical-align: middle;
}
.nav-bar--secondary
{
    padding-right: calc(#{$line-height} * 2); // compensate for the icon at the right of the primary nav-bar

    background-color: $accent-color--soft;
}
.nav-bar ul
{
    height: calc(#{$line-height} * 2); // each nav-bar has a height of 2 standard line-heights (on a standard screen approx 36px)
    margin: 0 $line-height;

    text-align: right;
}
.nav-bar__item
{
    display: inline-block;

    width: calc(#{$line-height} * 5); // fits for the content up till now
    padding: 0 $line-height-half;
}
.nav-bar__item-link,
.nav-bar__item-link:visited
{
    display: inline-block;

    width: 100%;
    padding: $line-height-half;

    text-align: center;
    vertical-align: middle;

    color: $text-color-white;
}
.nav-bar__item-link:hover,
.nav-bar__item-link:active
{
    text-decoration: none;

    color: $scheppers-blauw-wit;
}
.nav-bar__item-link--active,
.nav-bar__item-link--active:visited,
.nav-bar--secondary .nav-bar__item-link,
.nav-bar--secondary .nav-bar__item-link:visited
{
    opacity: 1;
    color: $scheppers-blauw;
    background-color: $accent-color--soft;
}
.nav-bar__item--icon
{
    width: $line-height;
}

